--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.3",
+    "@fontsource/inter": "^5.1.1",
     "@google/generative-ai": "^0.21.0",
     "@mapbox/search-js-react": "^1.0.0-beta.22",
     "@neondatabase/serverless": "^0.10.3",
